feat: 更新 .gitignore，调整 AI Agent 环境文件路径；新增 agent.db 文件；优化代码注释和日志信息